ghostwriter/static/css/styles.css
/* ... */
.italic {
  font-style: italic;
}

.underline {
  text-decoration: underline;
}

.center {
  text-align: center;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}

.right {
  text-align: right;
}

.left {
  text-align: left;
}

.highlight {
  background-color: yellow;
}

.blockquote {
  border-left: 5px solid #ccc;
  padding: 0.5em;
  margin: 0.5em;
  font-size: var(--main-font-size);
}

.tox-toolbar__group:last-child {
  margin-left: auto !important;
}

/* ---------------------------------------------------
    HEADER STYLES
----------------------------------------------------- */

h1 {
  text-align: center;
  color: var(--h1-font-color);
  font-family: 'Metrophobic', 'Font Awesome 5 Free', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  font-size: 2.75em;
}

h2 {
  text-align: center;
  color: var(--h2-font-color);
  font-family: 'Metrophobic', 'Font Awesome 5 Free', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  font-size: 2.5em;
}

h3 {
  font-family: 'Metrophobic', 'Font Awesome 5 Free', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  font-size: 2em;
  color: var(--h3-font-color);
}

h4 {
  font-family: 'Metrophobic', 'Font Awesome 5 Free', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  margin-top: 20px;
  margin-bottom: 20px;
  font-size: 1.75em;
}

h6 {
  font-family: 'Metrophobic', 'Font Awesome 5 Free', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  font-size: 1em;
  padding-top: 10px;
}

.clickable-link {
  cursor: pointer;
}

.copy-link:before {
  font-family: 'Font Awesome 5 Free';
  display: inline-block;
  padding-right: 10px;
  vertical-align: middle;
  font-weight: 600;
  content: '\f0c5';
  color: #51B071;
  padding-left: 5px;
  font-size: 14px;
}

.copy-link {
  cursor: copy;
}

#scroll-button {
  display: inline-block;
  background-color: var(--button-primary-color);
  width: 40px;
  height: 40px;
  text-align: center;
  border-radius: 50%;
  margin: 30px;
  position: fixed;
  bottom: 15px;
  right: 15px;
  transition: background-color .3s;
  z-index: 1000;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

#scroll-button:hover {
  cursor: pointer;
  background-color: #333;
}

#scroll-button:active {
  background-color: #555;
}

#scroll-button::before {
  font-family: 'Font Awesome 5 Free';
  content: '\f062';
  font-weight: 600;
  font-style: normal;
  text-rendering: auto;
  font-size: 1.75em;
  line-height: 40px;
  color: #fff;
}

/* ---------------------------------------------------
    MODAL STYLES
----------------------------------------------------- */

#object-preview-content {
  font-style: italic;
  text-align: center;
  margin: 20px;
}

.please-wait-modal {
  border: 16px solid var(--secondary-color);
  border-top: 16px solid var(--primary-color);
  border-radius: 50%;
  width: 120px;
  height: 120px;
  animation: spin 2s linear infinite;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

.scope-modal-dialog {
  overflow-y: initial;
}

.scope-modal-body {
  max-height: 80vh;
  overflow-y: auto;
}

.oplog-modal-body {
  max-height: 80vh;
  overflow-y: auto;
}

.oplog-modal-dialog {
  overflow-y: auto;
}

.token-modal {
  max-width: 90%;
}

.confirm-token {
  word-wrap: break-word;
}

.modal-super-sized {
  max-width: 90%;
}

/* ---------------------------------------------------
    FORM STYLES
----------------------------------------------------- */

.form-control::placeholder {
  color: var(--ghost-grey);
  opacity: 0.75;
}

.form-control::-webkit-input-placeholder {
  color: var(--ghost-grey);
}

.form-control:-moz-placeholder {
  /* Firefox 18- */
  color: var(--ghost-grey);
}

.form-control::-moz-placeholder {
  /* Firefox 19+ */
  color: var(--ghost-grey);
}

.form-control:-ms-input-placeholder {
  color: var(--ghost-grey);
}

.filter-form .card-body .form-group {
  margin-bottom: 0;
}

.invalid-feedback {
  display: block;
}

/* ---------------------------------------------------
    FILE UPLOAD STYLES
----------------------------------------------------- */

input[type='file'] {
  position: absolute;
  left: 0;
  opacity: 0;
  top: 0;
  bottom: 0;
  width: 100%;
}

.csvdiv {
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #ccc;
  border: 3px dotted #bebebe;
  border-radius: 10px;
}

.csvlabel {
  display: inline-block;
  position: relative;
  height: 100px;
  width: 400px;
}

.csvdiv.dragover {
  background-color: #aaa;
}

/* ---------------------------------------------------
    USER AVATAR STYLES
----------------------------------------------------- */

.avatar {
  width: 250px;
  height: 250px;
  border-radius: 50%;
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  position: relative;
  display: inline-block;
  border-color: rgba(255, 255, 255, 0.3);
  object-fit: cover;
}

.avatar_note {
  width: 70%;
  height: 70%;
  border-radius: 50%;
  border-style: solid;
  border-width: 1px;
  object-fit: cover;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

/* ---------------------------------------------------
    TOP BAR STYLES
----------------------------------------------------- */

.top-bar {
  background: var(--navbar-background-color);
  padding-top: 8px;
  padding-bottom: 5px;
  vertical-align: middle;
}

.report {
  border-radius: var(--button-border-radius);
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.selected-report {
  color: var(--navbar-report-selected-font-color);
  font-weight: 600;
}

.selected-report:before {
  content: '\f205' !important;
}
/* ... */

